# auspicious-library

./: $  .clangd  .gitignore  CHANGELOG  CMakeLists.txt  Changelog.md  Changelog_8md.html  Doxyfile  Guidelines.md  Guidelines_8md.html  LICENSE  License.md  License_8md.html  Makefile  README.md  Readme.md  Readme_8md.html  al__ansi__escape__codes_8hpp.html  al__ansi__escape__codes_8hpp.js  al__ansi__escape__codes_8hpp_source.html  al__argument__parser_8hpp.html  al__argument__parser_8hpp.js  al__argument__parser_8hpp_source.html  al__container__utilities_8hpp.html  al__container__utilities_8hpp.js  al__container__utilities_8hpp_source.html  al__file__utilities_8hpp.html  al__file__utilities_8hpp.js  al__file__utilities_8hpp_source.html  al__string__manipulators_8hpp.html  al__string__manipulators_8hpp.js  al__string__manipulators_8hpp_source.html  annotated.html  auspicious__library_8hpp.html  auspicious__library_8hpp.js  auspicious__library_8hpp_source.html  classes.html  conceptauspicious__library_1_1cu_1_1boundless__accessible.html  conceptauspicious__library_1_1cu_1_1cu__compatible.html  conceptauspicious__library_1_1cu_1_1cu__compatible__enum.html  (+105 more)
.cache/clangd/index/: al_ansi_escape_codes.hpp.772628A9ED05EA59.idx  al_argument_parser.hpp.25CB506AA72FA60B.idx  al_container_utilities.hpp.3C6A493E59653B09.idx  al_file_utilities.hpp.E0B4891FAE1E5710.idx  al_string_manipulators.hpp.4FC352EF050E861E.idx  argument_parser.cpp.D965F798F8CAD78A.idx  auspicious_library.hpp.71DD60BBD8BD2A75.idx  test_aec.cpp.CB52DF2CDED94EAC.idx  test_ap.cpp.C7698E8E1C85A6BA.idx  test_ap.hpp.8E7A7C89EACA243F.idx  test_ap.hpp.CFFDEFA7030435E1.idx  test_ap_0.cpp.2478E2AC07FFD3E4.idx  test_ap_1.cpp.8152C1FBD67ECE66.idx  test_ap_10.cpp.72C8846815AAD973.idx  test_ap_11.cpp.ACDD84F98DE6BAAE.idx  test_ap_12.cpp.5CE0821DAA2F7240.idx  test_ap_2.cpp.D1DFF3C09DAE15D1.idx  (+15 more)
.github/workflows/: main.yml
cmake/: auspicious_library_config.cmake.in
docs/html/: CHANGELOG.html  CHANGELOG_8md.html  Changelog_8md.html  GUIDELINES.html  GUIDELINES_8md.html  Guidelines_8md.html  LICENSE.html  LICENSE_8md.html  License_8md.html  Makefile.html  README_8md.html  README__DOXYGEN.html  README__DOXYGEN_8md.html  Readme_8md.html  al__ansi__escape__codes_8hpp.html  al__ansi__escape__codes_8hpp_source.html  al__argument__parser_8hpp.html  al__argument__parser_8hpp.js  al__argument__parser_8hpp_source.html  al__container__utilities_8hpp.html  al__container__utilities_8hpp.js  al__container__utilities_8hpp_source.html  al__file__utilities_8hpp.html  al__file__utilities_8hpp.js  al__file__utilities_8hpp_source.html  al__string__manipulators_8hpp.html  al__string__manipulators_8hpp.js  al__string__manipulators_8hpp_source.html  annotated.html  annotated_dup.js  ansi__escape__codes_8hpp.html  ansi__escape__codes_8hpp.js  ansi__escape__codes_8hpp_source.html  argument__parser_8cpp.html  argument__parser_8cpp.js  argument__parser_8hpp.html  argument__parser_8hpp.js  argument__parser_8hpp_source.html  auspicious__library_8hpp.html  auspicious__library_8hpp.js  (+176 more)
docs/latex/: CHANGELOG.tex  Changelog_8md.tex  GUIDELINES.tex  GUIDELINES_8md.tex  Guidelines_8md.tex  LICENSE.tex  License_8md.tex  Makefile.tex  README__DOXYGEN.tex  README__DOXYGEN_8md.tex  Readme_8md.tex  al__ansi__escape__codes_8hpp.tex  al__ansi__escape__codes_8hpp_source.tex  al__argument__parser_8hpp.tex  al__argument__parser_8hpp_source.tex  al__container__utilities_8hpp.tex  al__container__utilities_8hpp_source.tex  al__file__utilities_8hpp.tex  al__file__utilities_8hpp_source.tex  al__string__manipulators_8hpp.tex  al__string__manipulators_8hpp_source.tex  annotated.tex  ansi__escape__codes_8hpp.tex  ansi__escape__codes_8hpp_source.tex  argument__parser_8cpp.tex  argument__parser_8hpp.tex  argument__parser_8hpp_source.tex  auspicious__library_8hpp.tex  auspicious__library_8hpp_source.tex  conceptauspicious__library_1_1cu_1_1boundless__accessible.tex  conceptauspicious__library_1_1cu_1_1cu__compatible.tex  conceptauspicious__library_1_1cu_1_1cu__compatible__enum.tex  conceptauspicious__library_1_1cu_1_1cu__compatible__nested.tex  conceptauspicious__library_1_1sm_1_1sm__compatible.tex  concepts.tex  container__utilities_8hpp.tex  container__utilities_8hpp_source.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  (+75 more)
examples/: CMakeLists.txt  Readme.md
examples/cu/: arithmetics.cpp  boundless_containers.cpp  enumerated_array.cpp
examples/sm/: arithmetics.cpp  to_string.cpp
include/: al_ansi_escape_codes.hpp  al_argument_parser.hpp  al_container_utilities.hpp  al_file_utilities.hpp  al_string_manipulators.hpp  ansi_escape_codes.hpp  argument_parser.hpp  auspicious_library.hpp  auspicious_library_config.hpp.in  container_utilities.hpp  string_manipulators.hpp
junk/: builder.cpp  builder.hpp  enumerated_map.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_3.js  classes_4.js  concepts_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  files_0.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  (+18 more)
src/: argument_parser.cpp
tests/: CMakeLists.txt  test_aec.cpp  test_ap.cpp  test_ap.hpp  test_ap_0.cpp  test_ap_1.cpp  test_ap_10.cpp  test_ap_11.cpp  test_ap_12.cpp  test_ap_2.cpp  test_ap_3.cpp  test_ap_4.cpp  test_ap_5.cpp  test_ap_6.cpp  test_ap_7.cpp  test_ap_8.cpp  test_ap_9.cpp  test_cu.cpp  test_cu_containers.cpp  test_fu.cpp  test_fu_read_all_file.txt  test_sm.cpp  test_to_string.cpp  tester.cpp  tester.hpp
tests/test_ap/: test_ap.hpp  test_ap_0.cpp  test_ap_1.cpp  test_ap_10.cpp  test_ap_11.cpp  test_ap_12.cpp  test_ap_2.cpp  test_ap_3.cpp  test_ap_4.cpp  test_ap_5.cpp  test_ap_6.cpp  test_ap_7.cpp  test_ap_8.cpp  test_ap_9.cpp
(+88 files in other folders)
